--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "coveralls": "nyc ./node_modules/.bin/mocha --opts mocha.opts tests/**/*.js && nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "btoa": "^1.2.1",
     "bull": "^4.16.4",
     "chai-http": "^4.3.0",
     "dotenv": "^16.0.1",
