--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "coveralls": "nyc ./node_modules/.bin/mocha --opts mocha.opts tests/**/*.js && nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
+    "@bull-board/express": "^6.5.3",
     "bcrypt": "^5.1.1",
     "btoa": "^1.2.1",
     "bull": "^4.16.4",
@@ -30,6 +31,7 @@
     "mime-message": "^0.1.3",
     "mime-types": "^2.1.27",
     "mongodb": "^3.5.9",
+    "nodemailer": "^6.9.16",
     "redis": "^4.7.0",
     "sha1": "^1.1.1",
     "uuid": "^8.2.0"
