--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "btoa": "^1.2.1",
     "bull": "^4.16.4",
     "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "googleapis": "^101.0.0",
@@ -32,6 +33,7 @@
     "mime-types": "^2.1.27",
     "mongodb": "^3.5.9",
     "nodemailer": "^6.9.16",
+    "react-login-page": "^1.0.4",
     "redis": "^4.7.0",
     "sha1": "^1.1.1",
     "uuid": "^8.2.0"
